Moved disability confident checkbox and future prospects

--- a/app/views/v6/provider/create/about-employer.html
+++ b/app/views/v6/provider/create/about-employer.html
@@ -33,6 +33,27 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
               </div>
             </div>
           </div>
+
+          <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
+              <legend class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
+                Disability Confident employer (optional)
+              </legend>
+
+              <div class="govuk-checkboxes">
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="is-disability-confident" name="is-disability-confident" type="checkbox"
+                    value="british" aria-describedby="is-disability-confident">
+                  <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
+                     This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
+                      target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
+                      Confident scheme</a>.
+                  </label>
+                </div>
+              </div>
+            </fieldset>
+          </div>
+      
           <div class="govuk-form-group">
             <label class="govuk-label" for="EmployerWebsiteUrl">
               The organisation's website (optional)
