--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -77,17 +77,10 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               <br>
               <br>
               Training and qualification levels
-              <br>
-              <br>
-              Future prospects
             </dt>
             <dd class="govuk-summary-list__value">
               [[your description]]
               <br>
-              <br>
-              <br>
-              <br>
-              [[your description]]
               <br>
               <br>
               <br>
@@ -111,9 +104,6 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               <br>
               <br>
               Apprenticeship start date
-              <br>
-              <br>
-              Disability Confident Employer?
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected dates]]
@@ -121,10 +111,6 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               <br>
               <br>
               [[selected dates]]
-              <br>
-              <br>
-              <br>
-              [[Yes if selected tick box, No if not selected]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -270,6 +256,20 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              Future prospects
+            </dt>
+            <dd class="govuk-summary-list__value">
+               [[your description]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> description</span>
+              </a>
+            </dd>
+          </div> 
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
               Other things to consider
             </dt>
             <dd class="govuk-summary-list__value">
@@ -318,6 +318,9 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               Employer information
               <br>
               <br>
+              Disability Confident Employer?
+              <br>
+              <br>
               Organisation website (optional)
             </dt>
             <dd class="govuk-summary-list__value">
@@ -325,7 +328,10 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               <br>
               <br>
               <br>
-              [[your description, or if the user has not written anything just put None]]
+              [[Yes if selected tick box, No if not selected]]
+              <br>
+              <br>
+              [[your description, or if the user has not written anything just put None]]              
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
