--- a/app/views/v6/provider/create/dates.html
+++ b/app/views/v6/provider/create/dates.html
@@ -28,7 +28,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
     </div>
     {% endif %}
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Important dates</h1>
+    <h1 class="govuk-heading-xl">Closing and start dates</h1>
     <!-- {% if data.expiryDate %}
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -135,26 +135,6 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
         </fieldset>
       </div>
 
-
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
-          <legend class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
-            Disability Confident employer (optional)
-          </legend>
-
-          <div class="govuk-checkboxes">
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="is-disability-confident" name="is-disability-confident" type="checkbox"
-                value="british" aria-describedby="is-disability-confident">
-              <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
-                 This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
-                  target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
-                  Confident scheme</a>.
-              </label>
-            </div>
-          </div>
-        </fieldset>
-      </div>
       <div class="govuk-button-group">
           <button class="govuk-button" data-module="govuk-button">Save and continue</button>
           <a class="govuk-link" href="../dashboard">Cancel</a>
