--- a/app/views/v6/provider/create/qualifications-list.html
+++ b/app/views/v6/provider/create/qualifications-list.html
@@ -42,7 +42,7 @@ Qualifications - Recruitment - {{serviceName}} - GOV.UK
           <div class="govuk-form-group">
             {{ govukButton({
               text: "Save and continue",
-              href: "things-to-consider"
+              href: "future-prospects"
             }) }}   
             <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
             <!--<input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Preview">-->
