--- a/app/views/v6/provider/create/confirmation.html
+++ b/app/views/v6/provider/create/confirmation.html
@@ -17,7 +17,8 @@ Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
         <br><strong>VAC1000000965</strong>
       </div>
     </div>
-    <h2 class="govuk-heading-m">What happens next</h2>
+
+    <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h2>
     {% if data.user == employer %}{% set pronoun = "your" %}{%else%}{% set pronoun = "the" %}{%endif%}
     {% if data.has_notifications == "yes"%}
 
@@ -28,19 +29,12 @@ Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
     {% endif %}
     <p class="govuk-body">When we approve your vacancy, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service (opens in a new tab)</a>.</p>
     <form method="post">
-    <div class="form-group inline">
-      <div class="form-group">
-        <a class="govuk-button" href="create-vacancy">Create another vacancy</a><br /><br />
-        {% if data.journey=='new'%}
-        <a href="../dashboard-one" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
-        <!--<a href="../dashboard-one" class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>-->
-        {% else %}
-        <a href="../dashboard" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
-        <!--<a href="../dashboard?user=employer" class="govuk-button" data-module="govuk-body das-button--link" type="submit">Return to dashboard</a>-->
-        {% endif %}
 
+      <div class="govuk-button-group govuk-!-margin-top-5">
+        <a class="govuk-button" href="task-list">Create another vacancy</a>
       </div>
-    </div>
+      <a class="govuk-link" href="../dashboard">Return to dashboard</a>
+
     </form>
   </div>
 </div>
