--- a/app/views/v6/provider/create/employer-name.html
+++ b/app/views/v6/provider/create/employer-name.html
@@ -30,12 +30,12 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
               <input class="govuk-radios__input" id="display-name-trading" name="selected_display_name" type="radio"
                 value="trading" data-aria-controls="trading-name-conditional">
               <label class="govuk-label govuk-radios__label" for="display-name-trading">
-                A trading name
+                A different name
               </label>
             </div>
             <div class="govuk-radios__conditional" id="trading-name-conditional">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-!-font-weight-bold" for="tradingName">Trading name</label>
+                <label class="govuk-label govuk-!-font-weight-bold" for="tradingName">Enter employer name</label>
                 <input class="govuk-input govuk-input--width-20" id="tradingName" name="tradingName" type="text">
               </div>
             </div>
@@ -44,7 +44,7 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
               <input class="govuk-radios__input" id="display-name-anonymous" name="selected_display_name" type="radio"
                 value="anonymous" data-search-value="Organisation" data-aria-controls="anonymous-conditional">
               <label class="govuk-label govuk-radios__label" for="display-name-anonymous">
-                Do not display a name (be anonymous)<br>
+                I do not want an employer name on my vacancy (be anonymous)<br>
                 <div class="govuk-hint">This could mean fewer people see your vacancy</div>
               </label>
             </div>
