--- a/app/views/v6/provider/create/start-page.html
+++ b/app/views/v6/provider/create/start-page.html
@@ -16,11 +16,12 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">Create a vacancy</h1>
-      <p class="govuk-body-l">Recruit an apprentice by creating a vacancy on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship (opens in a new tab)</a>.</p>
+      <p class="govuk-body-l">Recruit an apprentice by creating a vacancy on <a href="https://www.gov.uk/apply-apprenticeship" class="govuk-link govuk-link--no-visited-state" target="_blank">Find an apprenticeship (opens in a new tab)</a>.</p>
       
       <h2 class="govuk-heading-m">Before you start</h2>
       <p class="govuk-body">Before you create a vacancy, you’ll need to know:</p>
       <ul class="govuk-list govuk-list--bullet">
+        <li>the name of the employer</li>
         <li>the name of the apprenticeship training course</li>
         <li>the duration of the apprenticeship</li>
         <li>the number of hours spent working and training</li>
@@ -28,7 +29,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       </ul>
 
       <div class="govuk-inset-text">
-        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-an-employer">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create vacancies using your existing systems or display vacancies from Find an apprenticeship on your websites.
+        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-a-training-provider" target="_blank">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create vacancies using your existing systems or display vacancies from Find an apprenticeship on your websites.
       </div>
 
 
