--- a/app/views/v6/provider/create/wages.html
+++ b/app/views/v6/provider/create/wages.html
@@ -38,7 +38,7 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
           </h1>
         </legend>
         <div id="contact-hint" class="govuk-hint">
-          Pay will show as a yearly figure on your advert. <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">View the​ ​National Minimum Wage for apprentices (opens in a new tab)​</a>.
+          Pay will show as a yearly figure on your vacancy. <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">View the​ ​National Minimum Wage for apprentices (opens in a new tab)​</a>.
         </div>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
@@ -51,9 +51,9 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinApprentice-wage-conditional">
             <div class="govuk-form-group">
               <div id="MinApprentice-wage-conditional" class="govuk-hint govuk-radios__hint">
-                From 1 April 2021, the National Minimum Wage is between £4.62 and £8.91 an hour, depending on the candidate's age.
+                From 1 April 2022, the National Minimum Wage is between £4.81 and £9.50 an hour, depending on the candidate's age.
                 <br><br>
-                On the advert, this will be displayed as a yearly wage of £5,525.52 to £10,656.36.
+                On the vacancy this will be displayed as a yearly wage of £5,752.76 to £11,362
               </div>
             </div>
           </div>  
@@ -67,9 +67,9 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinNat-wage-conditional">
             <div class="govuk-form-group">
               <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour.
+                From 1 April 2022, the National Minimum Wage for apprentices is £4.81 an hour.
                 <br><br>
-                On the advert, this will be displayed as a yearly wage of £5,142.80.
+                On the vacancy, this will be displayed as a yearly wage of £5,752.76.
               </div>
             </div>
           </div>  
@@ -83,13 +83,13 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
             <div class="govuk-form-group {% if data.error == "wages" %}govuk-form-group--error{% endif %}">
               <!--<label class="govuk-label">Yearly wage</label>-->
               <p class="govuk-body govuk-hint">
-                This must be more than the <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">National Minimum Wage for apprentices (opens in a new tab or window)​</a>.
+                This must be more than the <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">National Minimum Wage for apprentices (opens in a new tab)​</a>.
               </p>
               <p class="govuk-body govuk-hint">
-                From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour.
+                From 1 April 2022, the National Minimum Wage for apprentices is £4.81 an hour.
               </p>                
               <p class="govuk-body govuk-hint">
-                Based on 23 working hours a week, you'll need to pay a yearly wage of at least £5,142.80.
+                Based on 23 working hours a week, you'll need to pay a yearly wage of at least £5,752.76.
               </p>
               {% if data.error == "wages"%}
               <span id="yearly-wage-issue" class="govuk-error-message">
