--- a/app/views/v6/provider/create/future-prospects.html
+++ b/app/views/v6/provider/create/future-prospects.html
@@ -18,7 +18,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
     <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
       <div class="govuk-form-group">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="with-hint">
+        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="OutcomeDescription">
             What is the expected career progression after this apprenticeship?
           </label>
         </h1>
