Updated qualifications section in CYA

--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -203,17 +203,17 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Qualifications required
-              <br>
-              <br>
               Skills
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected Y/N]]
-              <br>
-              <br>
-              <br>
-             [[skills and qualities]]
+              <ul class="govuk-list govuk-list--bullet">
+                <li>[[skills and qualities 1]]</li>
+                <li>[[skills and qualities 2]]</li>
+                <li>[[skills and qualities 3]]</li>
+       <!--          <li>Communication skills</li>
+                <li>Attention to detail</li>
+                <li>Customer care skills</li> -->
+              </ul>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -224,28 +224,13 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Qualification type
-              <br>
-              <br>
-              Subject
-              <br>
-              <br>
-              Grade
-              <br>
-              <br>
-              Essential or desirable?
+              Qualifications
             </dt>
             <dd class="govuk-summary-list__value">
-              [[qualification selected]]
-              <br>
-              <br>
-              [[your description]]
-              <br>
-              <br>
-              [[your description]]
-              <br>
-              <br>
-              [[essential or desirable selected]]
+              <ul class="govuk-list govuk-list--bullet">
+                <li>[[Qualificattion information]]</li>
+       <!--          <li>GCSE or equivalent English (Grade 8) essential</li> -->
+              </ul>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
