--- a/app/views/v6/provider/create/qualifications-list.html
+++ b/app/views/v6/provider/create/qualifications-list.html
@@ -19,7 +19,7 @@ Qualifications - Recruitment - {{serviceName}} - GOV.UK
         </div>
         {% endif %}
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-        <h1 class="govuk-heading-xl">
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
           Qualifications
         </h1>
         <table class="govuk-table responsive-table">
@@ -34,7 +34,7 @@ Qualifications - Recruitment - {{serviceName}} - GOV.UK
             {% endfor %}
           </tbody>
         </table>
-        <p class="govuk-body">
+        <p class="govuk-body govuk-!-margin-bottom-7">
           <a href="qualifications?add=yes" class="govuk-link">Add another qualification</a>
         </p>
 
