--- a/app/views/v6/provider/create/wages.html
+++ b/app/views/v6/provider/create/wages.html
@@ -110,7 +110,7 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
        
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-!-font-weight-bold" for="WageAdditionalInformation">
+          <label class="govuk-label govuk-label--m" for="WageAdditionalInformation">
             Extra information about pay (optional)
           </label>
 
