--- a/app/views/v6/provider/create/duration.html
+++ b/app/views/v6/provider/create/duration.html
@@ -14,11 +14,11 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Duration and working hours</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Duration and working hours</h1>
 
     <form method="post">
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-!-font-weight-bold" for="duration">
+        <label class="govuk-label govuk-label--m" for="duration">
           How long is the whole apprenticeship, including work and training?
         </label>
         <div class="govuk-hint">The apprenticeship must last at least 12 months. For {{data.training_level or "Food and Drink: Fish and Shellfish Industry Skills"}}, the typical length is 24 months.</div>
@@ -32,7 +32,7 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-!-font-weight-bold" for="workingWeekDescription">
+          <label class="govuk-label govuk-label--m" for="workingWeekDescription">
             Details of working week
           </label>
           <div class="govuk-hint">For example, Monday to Friday 9am to 5pm, shifts, may work evenings and weekends</div>
@@ -42,7 +42,7 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
       </div>
 
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-!-font-weight-bold" for="weekly-hours">
+        <label class="govuk-label govuk-label--m" for="weekly-hours">
           How many hours will the apprentice work each week, including training?
         </label>
 
