--- a/app/views/v6/provider/create/employer.html
+++ b/app/views/v6/provider/create/employer.html
@@ -14,7 +14,7 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Which employer is this vacancy for?</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which employer is this vacancy for?</h1>
     <form method="POST">
         {% if  data.NumberOfEntities > 10 %}
 				<fieldset class="govuk-fieldset">
