--- a/app/views/v6/provider/create/location.html
+++ b/app/views/v6/provider/create/location.html
@@ -37,7 +37,7 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
             </div>
             <div class="govuk-radios__conditional" id="other-location-conditional">
               <div id="address-details" class="address-manual-input">
-                <label class="govuk-label govuk-!-font-weight-bold">Enter the address where the apprentice will work</label>
+                <label class="govuk-label">Enter the address where the apprentice will work</label>
                 <div class="govuk-form-group-compound address-item govuk-form-group">
                     <label class="govuk-visually-hidden" for="AddressLine1">Address line 1</label>
                     <span class="govuk-error-message field-validation-valid" id="error-message-AddressLine1" data-valmsg-for="AddressLine1" data-valmsg-replace="true"></span>
@@ -59,7 +59,7 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
                     <input class="govuk-input" maxlength="100" type="text" id="AddressLine4" name="AddressLine4" value="">
                 </div>
                 <div class="govuk-form-group address-item govuk-form-group">
-                    <label class="govuk-label govuk-!-font-weight-bold" for="Postcode">Enter postcode</label>
+                    <label class="govuk-label" for="Postcode">Enter postcode</label>
                     <span class="govuk-error-message field-validation-valid" id="error-message-Postcode" data-valmsg-for="Postcode" data-valmsg-replace="true"></span>
                     <input class="govuk-input govuk-input--width-10 postcode-lookup ui-autocomplete-input" maxlength="8" type="text" id="Postcode" name="Postcode" value="" autocomplete="off">
                 </div>
