--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -40,14 +40,16 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
     {% endif%}
+
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">About the apprenticeship</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">About the apprenticeship</h1>
+
     <form method="post">
-      <fieldset class="govuk-fieldset">
+
 
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'VacancyDescription' in data.errorType %}govuk-form-group--error{% endif %}">
-            <label class="govuk-label govuk-!-font-weight-bold" for="VacancyDescription">
+            <label class="govuk-label govuk-label--m" for="VacancyDescription">
               What will the apprentice be doing?
             </label>
             <div class="govuk-hint">Describe what an average day or week will be like and what tasks they could be doing.</div>
@@ -66,7 +68,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
         </div>
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'TrainingQualification' in data.errorType %}govuk-form-group--error{% endif %}">
-            <label class="govuk-label govuk-!-font-weight-bold" for="TrainingQualification">
+            <label class="govuk-label govuk-label--m" for="TrainingQualification">
               What training will the apprentice take and what qualification will the apprentice get at the end?
             </label>
             <p class="govuk-body">You must include information about the following:</p>
@@ -91,7 +93,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
           <button class="govuk-button" data-module="govuk-button">Save and continue</button>
           <a class="govuk-link" href="../dashboard">Cancel</a>
         </div>
-      </fieldset>
+     
     </form>
 
   </div>
