--- a/app/views/v6/provider/create/qualifications.html
+++ b/app/views/v6/provider/create/qualifications.html
@@ -28,7 +28,7 @@ What qualifications would you like the applicant to have? - Recruitment - {{serv
             </div>
           </div>
           {% endif %}
-        <h1 class="govuk-heading-xl">
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
           <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
           What qualifications would you like the applicant to have?
         </h1>
@@ -66,7 +66,7 @@ What qualifications would you like the applicant to have? - Recruitment - {{serv
 
           <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
-                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                       <h1 class="govuk-fieldset__heading">Is this qualification essential or desirable?</h1>
                   </legend>
                   <div class="govuk-radios govuk-radios--inline">
