--- a/app/views/v6/provider/create/short-description.html
+++ b/app/views/v6/provider/create/short-description.html
@@ -14,7 +14,11 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Summary of the apprenticeship<h1>
+    <h1 class="govuk-label-wrapper">
+      <label class="govuk-label govuk-label--xl" for="shortDescription">
+        Summary of the apprenticeship
+      </label>
+    </h1>
     <form method="post">
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
         <div class="govuk-form-group">
