--- a/app/views/v6/provider/create/std-confirm.html
+++ b/app/views/v6/provider/create/std-confirm.html
@@ -14,7 +14,7 @@ Confirm apprenticeship training - Recruitment - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Confirm apprenticeship training course</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm apprenticeship training course</h1>
 
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
     <h1 class="govuk-heading-xl">
