--- a/app/views/v6/provider/create/std-select.html
+++ b/app/views/v6/provider/create/std-select.html
@@ -12,10 +12,11 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
 {% block content %}
 
 
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-        <h1 class="govuk-heading-xl">What training course will the apprentice take?</h1>
+
+        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="searchClients">What training course will the apprentice take?</h1>
         <div class="" style="display:none;">
           {% for item in data.training %}
           <span class="data-name">{{item}}</span>
@@ -29,9 +30,9 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
             <div class="govuk-form-group search-field search-field-darker">
               <input type="hidden" name="clientsFilter" value="new">
               <div class="search-input ">
-                <label class="govuk-label" for="contact-by-email">
+                <div id="with-hint-hint" class="govuk-hint">
                   Enter training course title
-                </label>
+                </div>
                 <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
                   <div class="autocomplete__wrapper">
                     <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px 0px 0px 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
