Made contact details a required question, not optional

--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -327,24 +327,22 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Contact name (optional)
+              Contact details
               <br>
               <br>
-              Contact email (optional)
+              Contact name 
               <br>
               <br>
-              Contact number (optional)
+              Contact number 
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected contact information]]
+              [[Yes/No]]
               <br>
               <br>
-              <br>
-              [[selected contact information]]
-              <br>
+              [[Contact name if selected]]
               <br>
               <br>
-              [[selected contact information]]
+              [[Contact number if selected]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
