Reverted multiple location work until ready to build

--- a/app/views/v6/employer/create/check-your-answers.html
+++ b/app/views/v6/employer/create/check-your-answers.html
@@ -146,14 +146,29 @@ Training provider
           
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Address & positions
+              Number of positions
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected address & positions]]
+              [[selected number]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address & positions</span>
+                Change<span class="govuk-visually-hidden"> number of positions</span>
+              </a>
+            </dd>
+          </div>
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Address
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected location]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> selected location</span>
               </a>
             </dd>
           </div>
