--- a/app/views/v6/employer/create/wages.html
+++ b/app/views/v6/employer/create/wages.html
@@ -30,7 +30,7 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
     </div>
     {% endif %}
     <div class="govuk-form-group">
-      <form method="post">
+      <form method="post" action="positions">
       <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
